# pysilentwave

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: publish.yml
pysilentwave/: __init__.py  client.py  exceptions.py
