[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysilentwave"
dynamic = ["version"]
description = "API client for TheSilentWave devices"
readme = "README.md"
authors = [
    {name = "TheSilentWave", email = "mail@thesilentwave.de"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/thesilentwave/pysilentwave"
